tests/semantic_error/semantic-error.cpp
void m()
{
  char x;
  double b;
  x = b;
}
exit